<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_tests"
            android:icon="@drawable/ic_tests"
            android:title="@string/menu_tests" />
        <item
            android:id="@+id/nav_bookmarks"
            android:icon="@drawable/ic_bookmarks"
            android:title="@string/menu_bookmarks" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />
    </group>
    <item android:title="@string/share_title_nav">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/menu_share" />
        </menu>
    </item>

</menu>
