<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/radio_group"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <RadioButton
        android:id="@+id/radio_all"
        style="@style/AppTextStyle.FilterButton"
        android:textColor="@color/colorPrimary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:checked="true"
        android:text="@string/radio_all" />

    <RadioButton
        android:id="@+id/radio_new"
        style="@style/AppTextStyle.FilterButton"
        android:textColor="@color/colorPrimary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/radio_new" />

    <RadioButton
        android:id="@+id/radio_started"
        style="@style/AppTextStyle.FilterButton"
        android:textColor="@color/colorPrimary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/radio_started" />
</RadioGroup>