<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/colorLightSilver"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/introNameTitle"
        style="@style/AppTextStyle.Light"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:text="@string/intro_enter_title"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/introNameEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/introNameEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/intro_username_hint"
        android:inputType="textPersonName"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:layout_constraintBottom_toTopOf="@+id/introNameButton"
        app:layout_constraintEnd_toEndOf="@+id/introNameTitle"
        app:layout_constraintStart_toStartOf="@+id/introNameTitle"
        app:layout_constraintTop_toBottomOf="@+id/introNameTitle"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/introNameButton"
        style="@style/AppTextStyle.SimpleButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/intro_next_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/introNameEdit"
        app:layout_constraintStart_toStartOf="@+id/introNameEdit"
        app:layout_constraintTop_toBottomOf="@+id/introNameEdit" />

    <TextView
        android:id="@+id/introNameMessage"
        style="@style/AppTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/intro_invalid_name_message"
        android:textColor="@color/colorRed"
        app:layout_constraintEnd_toEndOf="@+id/introNameEdit"
        app:layout_constraintStart_toStartOf="@+id/introNameEdit"
        app:layout_constraintTop_toBottomOf="@+id/introNameEdit" />
</androidx.constraintlayout.widget.ConstraintLayout>