<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/colorLightGold"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/introLevelTitle"
        style="@style/AppTextStyle.Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:text="@string/intro_level_title"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/introLevelImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <ImageView
        android:id="@+id/introLevelImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/description_language_level"
        app:layout_constraintBottom_toTopOf="@+id/introLevelRadioBar"
        app:layout_constraintEnd_toEndOf="@+id/introLevelTitle"
        app:layout_constraintStart_toStartOf="@+id/introLevelTitle"
        app:layout_constraintTop_toBottomOf="@+id/introLevelTitle"
        app:srcCompat="@drawable/ic_beginner" />

    <include
        android:id="@+id/introLevelRadioBar"
        layout="@layout/intro_radio_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/introLevelButton"
        app:layout_constraintEnd_toEndOf="@+id/introLevelImage"
        app:layout_constraintStart_toStartOf="@+id/introLevelImage"
        app:layout_constraintTop_toBottomOf="@+id/introLevelImage" />

    <Button
        android:id="@+id/introLevelButton"
        style="@style/AppTextStyle.SimpleButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/intro_next_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/introLevelTitle"
        app:layout_constraintStart_toStartOf="@+id/introLevelTitle"
        app:layout_constraintTop_toBottomOf="@+id/introLevelRadioBar" />

</androidx.constraintlayout.widget.ConstraintLayout>